# kiln

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: vscode-default-properties.json
src/: build_sys.rs  cli.rs  config.rs  constants.rs  dev_env_config.rs  editors.rs  headers_gen.rs  kiln_errors.rs  lexer.rs  main.rs  package_manager.rs  safety.rs  utils.rs
src/header_gen/: lexer.rs  lexer_c.rs  mod.rs
src/local_dev/: dev_env_config.rs  editors.rs  mod.rs
src/packaging/: ingot.rs  kiln_package.rs  mod.rs  package_manager.rs  pot.rs
src/testing/: mod.rs  safety.rs  valgrind.rs
tests/: lexer-UDT.c  lexer-define.c  lexer-struct.c
