[package]
name = "kiln"
version = "0.1.6"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
flate2 = "1.0.35"
home = "0.5.9"
once_cell = "1.20.2"
reqwest = "0.12.12"
serde = { version = "1.0.215", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.135"
serde_yaml = "0.9.34"
strum = "0.27.1"
strum_macros = "0.27.1"
tar = "0.4.43"
tempfile = "3.15.0"
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
